<resources>
    <string name="app_name">民警考核</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码 (必填)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">账号无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_password_null">密码不能为空</string>
    <string name="error_field_required">这是必填项目</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="gotoMainActivity">跳转到主页面</string>
    <string name="showprogress">展示dialog</string>
    <string name="remember_account">记住账号密码</string>
    <string name="title_activity_main">民警考核</string>
    <string name="action_settings">设置</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="bottom_button_check_in">签到</string>
    <string name="bottom_button_log">日志</string>
    <string name="bottom_button_request">请假</string>
    <string name="bottom_button_notice">公告</string>
    <string name="bottom_button_setting">个人</string>
    <string name="check_in">签到</string>
    <string name="log_label">日志</string>
    <string name="rest_label">请假</string>
    <string name="notice_label">公告</string>
    <string name="setting_label">设置</string>
    <string name="button_checkin">签到</string>
    <string name="button_checkout">签退</string>
    <string name="input_log_button">填写日志</string>
    <string name="text_work_state">工作动态</string>
    <string name="text_help_notice">协查通报</string>
    <string name="description_news">轮播新闻</string>
    <string name="action_close">退出</string>
    <string name="check_in_account">登录账号:</string>
    <string name="test_account">01001001</string>
    <string name="user_unit">用户单位:</string>
    <string name="text_unit">南阳市公安局</string>
    <string name="text_work">工作职责:</string>
    <string name="text_work_content">负责警务辖区内的入户走访，服务群众，安全隐患排查，重点人员管控等工作。</string>
    <string name="location_setting">位置反馈</string>
    <string name="password_setting">密码设置</string>
    <string name="close_btn">退出应用</string>
    <string name="text_is_openGPS">是否开启:</string>
    <string name="GPS_state">已开启</string>
    <string name="GPS_time">反馈时间:</string>
    <string name="GPS_time_setting">10分钟</string>
    <string name="GPS_setting_commit_btn">提交</string>
    <string name="old_password">原始密码</string>
    <string name="password_new">新的密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="notice_info">公告信息详情页</string>
    <string name="text_check_in_time">签到时间:</string>
    <string name="_07_56">07:56</string>
    <string name="check_in_position">签到地点：</string>
    <string name="position_ny">南阳市公安局</string>
    <string name="text_check_type">签到类型：</string>
    <string name="text_check_type_work">办公</string>
    <string name="is_delay">是否加班：</string>
    <string name="text_false">否</string>
    <string name="edit_time">填写时间:</string>
    <string name="edit_work">工作内容:</string>
    <string name="edit_limit">(最少填10字)</string>
    <string name="rest_type">请假类型:</string>
    <string name="rest_start_time">开始时间:</string>
    <string name="_2016_4_25">2016-4-25</string>
    <string name="rest_end_time">结束时间:</string>
    <string name="_2016_4_28">2016-4-28</string>
    <string name="rest_time">请假天数:</string>
    <string name="_4">4天</string>
    <string name="rest_reason">请假事由:</string>
    <string name="rest_edit">请假申请</string>
    <string name="check_out_time">签退时间</string>
    <string name="check_out_position">签退地点</string>
    <string name="work_long">工作时长:</string>
    <string name="_4_hour">4小时</string>
    <string name="check_edit">编辑</string>
    <string name="check_delete">删除</string>
    <string name="log_check">审批日志</string>
    <string name="text_approval">审批</string>
    <string name="log_refuse">退回</string>
    <string name="ip">IP及端口</string>
</resources>
