<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/text_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in_account"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/check_in_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/test_account"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_unit"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/text_unit"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_work"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:paddingTop="16dp"/>

        <TextView
            android:id="@+id/text_work_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/text_work_content"
            android:textSize="16sp"
            android:paddingTop="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.rey.material.widget.Button
            android:id="@+id/password_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_setting"
            android:textColor="@color/colorText"
            android:background="@drawable/common_button_background"
            app:rd_enable="true"
            app:rd_style="@style/Material.Drawable.Ripple.Wave" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"/>
        <com.rey.material.widget.Button
            android:id="@+id/close_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_btn"
            android:background="@drawable/common_button_background"
            android:textColor="@color/colorText"
            app:rd_enable="true"
            app:rd_style="@style/Material.Drawable.Ripple.Wave" />
    </LinearLayout>
</LinearLayout>