<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/wrap_layout">

            <LinearLayout
                android:id="@+id/rest_type"
                style="@style/top_layout"
                android:clickable="false">

                <TextView
                    style="@style/userText"
                    android:text="@string/rest_type" />

                <com.rey.material.widget.Spinner
                    android:id="@+id/spinner_type"
                    style="@style/Material.Widget.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rd_style="@style/Material.Drawable.Ripple.Wave"
                    app:spn_arrowAnimClockwise="true"
                    app:spn_arrowSwitchMode="true" />
            </LinearLayout>

            <View style="@style/bg_line" />

            <LinearLayout
                android:id="@+id/rest_start_time"
                style="@style/mid_layout">

                <TextView
                    style="@style/userText"
                    android:text="@string/rest_start_time" />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/_2016_4_25" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/setting_arrow" />
            </LinearLayout>

            <View style="@style/bg_line" />

            <LinearLayout
                android:id="@+id/rest_end_time"
                style="@style/mid_layout">

                <TextView
                    style="@style/userText"
                    android:text="@string/rest_end_time" />

                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/_2016_4_28" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/setting_arrow" />
            </LinearLayout>

            <View style="@style/bg_line" />

            <LinearLayout
                android:id="@+id/rest_time"
                android:clickable="false"
                style="@style/bottom_layout">

                <TextView
                    style="@style/userText"
                    android:text="@string/rest_time" />

                <TextView
                    android:id="@+id/rest_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/wrap_layout"
            android:layout_weight="1">

            <LinearLayout style="@style/single_layout">

                <TextView
                    style="@style/userText"
                    android:text="@string/rest_reason" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/rest_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <com.rey.material.widget.Button
            android:id="@+id/rest_edit_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0"
            android:background="@drawable/common_button_background"
            android:text="@string/GPS_setting_commit_btn"
            android:textColor="@color/colorText"
            app:rd_enable="true"
            app:rd_style="@style/Material.Drawable.Ripple.Wave" />
    </LinearLayout>
</ScrollView>