<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/edit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_time"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/edit_time_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/_07_56"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/edit_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_work"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/edit_work_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/edit_limit"
                android:textSize="16sp" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/work_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <com.rey.material.widget.Button
        android:id="@+id/commit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GPS_setting_commit_btn"
        android:textColor="@color/colorText"
        android:background="@drawable/common_button_background"
        app:rd_enable="true"
        app:rd_style="@style/Material.Drawable.Ripple.Wave"/>
</LinearLayout>